<resources>
    <string name="app_name"> Ezer\'s Adventure </string>

    <string name="new_game"> Start New Game </string>
    <string name="resume_game"> Resume Game </string>
    <string name="stop_game"> Stop Game </string>
    <string name="back_to_menu"> Return To Menu</string>

    <string name="mode_ready"> Ready </string>
    <string name="mode_pause"> Game Paused </string>
    <string name="mode_stopped"> Game Stopped </string>
    <string name="mode_lose"> Game Over </string>
    <string name="mode_win"> Victory </string>

    <string name="score_beg"> Score: 0 </string>

    <string name="countdown_start"> Get Ready </string>
    <string name="countdown_3"> 3 </string>
    <string name="countdown_2"> 2 </string>
    <string name="countdown_1"> 1 </string>

    <string name="sound_ON"> Turn Sound On </string>
    <string name="mute_sound"> Mute Sound </string>
    <string name="leaderboard"> LeaderBoard </string>
    <string name="settings"> Settings </string>
</resources>
